versão final 1.0
