# src/routes/doc.swagger.json
@@ -21,21 +21,32 @@
   "paths": {
     "/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "Usuário"
+        ],
+        "description": "Endpoint para efetuar Log In",
         "parameters": [
           {
-            "name": "body",
+            "name": "logIn",
             "in": "body",
+            "description": "Usuário/email e senha",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "exemplo@exemplo.com"
                 },
                 "senha": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "123tgr76uy"
                 }
-              }
+              },
+              "required": [
+                "email",
+                "senha"
+              ]
             }
           }
         ],
@@ -129,7 +140,10 @@
     },
     "/local/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Locais"
+        ],
+        "description": "Endpoint para cadastra novo local",
         "parameters": [
           {
             "name": "authorization",
@@ -137,33 +151,41 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "cadastrarLocal",
             "in": "body",
+            "description": "Detalhes do local a ser cadastrado",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nomeLocal": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Praça do lazer"
                 },
                 "descricao": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Área com pista de caminha e quadras poliesportivas"
                 },
                 "localidade": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Passeio dos Guararapes"
                 },
                 "cep": {
-                  "example": "any"
-                },
-                "latitude": {
-                  "example": "any"
-                },
-                "longitude": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "88000111"
                 },
                 "praticasPermitidas": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Caminha, corrida, futebol, basquete"
                 }
-              }
+              },
+              "required": [
+                "nomeLocal",
+                "descricao",
+                "localidade",
+                "cep",
+                "praticasPermitidas"
+              ]
             }
           }
         ],
@@ -180,7 +202,10 @@
         }
       },
       "get": {
-        "description": "",
+        "tags": [
+          "Locais"
+        ],
+        "description": "Endpoint para listar todos os locais cadastrados",
         "parameters": [
           {
             "name": "authorization",
@@ -190,7 +215,51 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Lista de todos os locais cadastrados",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "nomeLocal": {
+                      "type": "string",
+                      "example": "Praça do lazer"
+                    },
+                    "descricao": {
+                      "type": "string",
+                      "example": "Área com pista de caminha e quadras poliesportivas"
+                    },
+                    "localidade": {
+                      "type": "string",
+                      "example": "Passeio dos Guararapes"
+                    },
+                    "cep": {
+                      "type": "string",
+                      "example": "88000111"
+                    },
+                    "praticasPermitidas": {
+                      "type": "string",
+                      "example": "Caminha, corrida, futebol, basquete"
+                    }
+                  },
+                  "required": [
+                    "nomeLocal",
+                    "descricao",
+                    "localidade",
+                    "cep",
+                    "praticasPermitidas"
+                  ]
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "400": {
             "description": "Bad Request"
@@ -203,13 +272,20 @@
     },
     "/local/{local_id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Locais"
+        ],
+        "description": "Endpoint para mostrar um local específico",
         "parameters": [
           {
             "name": "local_id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID do local buscado",
+            "schema": {
+              "type": "integer"
+            }
           },
           {
             "name": "authorization",
@@ -236,13 +312,20 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Locais"
+        ],
+        "description": "Endpoint para deletar um local específico",
         "parameters": [
           {
             "name": "local_id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID do local a ser deletado",
+            "schema": {
+              "type": "integer"
+            }
           },
           {
             "name": "authorization",
@@ -269,13 +352,20 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Locais"
+        ],
+        "description": "Endpoint para atualizar um local específico baseado no ID fornecido.",
         "parameters": [
           {
             "name": "local_id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID do local a ser atualizado.",
+            "schema": {
+              "type": "integer"
+            }
           },
           {
             "name": "authorization",
@@ -283,33 +373,41 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "atualizarLocal",
             "in": "body",
+            "description": "Detalhes a serem atualizados do local",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nomeLocal": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Praça do lazer"
                 },
                 "descricao": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Área com pista de caminhada e quadras poliesportivas"
                 },
                 "localidade": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Passeio dos Guararapes"
                 },
                 "cep": {
-                  "example": "any"
-                },
-                "latitude": {
-                  "example": "any"
-                },
-                "longitude": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "88000111"
                 },
                 "praticasPermitidas": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Caminhada, corrida, futebol, basquete"
                 }
-              }
+              },
+              "required": [
+                "nomeLocal",
+                "descricao",
+                "localidade",
+                "cep",
+                "praticasPermitidas"
+              ]
             }
           }
         ],
